src/css/styles.css
/* ... */
/* start search */
a.search-input-link {
  display: none;
  width: 2.2em;
  height: 2.2em;
  background-size: 1.1em;
  background-image: url("../images/search-white-web.svg");
  background-position-x: 0.5em;
  background-position-y: 0.5em;
  background-color: transparent;
  background-repeat: no-repeat;
  margin: 0.65em 0;
  border: 2px solid #cbd1e0;
}

a.search-input-link:hover {
  opacity: .7;
}

/* Prevents search bar and search btn from floating around. */
.region-header-2 .block-search,
.region-header .block-search {
  clear: both;
  position: relative;
}

/* ua-bootstrap overrides for search form */
.btn-search {
  width: 2.3em;
  height: 2.3em;
  background-size: 1em 1em;
  background-position: right 0.6em top 0.6em;
}

.region-header-ua-utilities .search-form {
  position: relative;
  height: 38px;
  margin: 0.72em 0;
}

.search-form {
  height: initial;
}

.bg-cochineal-red .form-control,
.bg-red .form-control,
.bg-red a.search-input-link {
  border-color: #ef4056;
}

.bg-cochineal-red a.search-input-link,
.bg-red a.search-input-link {
  background-image: url("../images/search-white-web.svg");
}

#block-search-form {
  width: 272px;
  width: 17rem;
  float: none;
  position: relative;
  margin: auto auto 1.5em auto;
}

@media (min-width: 768px) {
  #block-search-form {
    float: right;
    margin-top: 16px;
    margin-top: 1rem;
  }
}
.region-sidebar-first .block,
.region-sidebar-second .block {
  margin-bottom: 24px !important;
  margin-bottom: 1.5rem !important;
}

.container-collapsed .column {
  min-height: initial;
}

/* override for above if sidebars are present */
.one-sidebar .container-collapsed .column,
.two-sidebars .container-collapsed .column {
  min-height: 1px;
}

/* Webform progress bar overrides. */
.has-local-menu-tasks .progress-wrapper {
  margin-top: 2em;
}

.webform-progressbar-page {
  position: absolute;
  width: 2em;
  height: 2em;
  border: 2px solid #e2e9eb;
  background-color: #e2e9eb;
  border-radius: 2em;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  margin: -0.7em 0 0 -1em;
}

.webform-progressbar-page:first-child {
  margin-left: 0px;
}

.webform-progressbar-page:last-child {
  margin-left: -27px;
}

.progress-wrapper {
  position: relative;
}

.progress-wrapper .webform-progress {
  margin: 0 16px;
  height: 0.6em;
}

.webform-progressbar-page .webform-progressbar-page-label {
  position: relative;
  color: #49595e;
  top: 0px;
  margin: 0 -10em;
}

.webform-progressbar-page.current {
  background-color: white;
  border-color: #70b865;
}

.webform-progressbar-page.completed {
  background-color: #70b865;
  border-color: #70b865;
}

.webform-progressbar-page.current .webform-progressbar-page-label {
  color: #70b865;
}

.webform-progressbar-page.current .webform-progressbar-page-number {
  color: #70b865;
}

.webform-progressbar-page.current:last-child {
  background-color: #70b865;
}

.webform-progressbar-page.current:last-child .webform-progressbar-page-number {
  color: white;
}

.webform-progressbar-page.completed .webform-progressbar-page-label {
  color: #70b865;
}

.webform-progressbar-page.completed .webform-progressbar-page-number {
  color: white;
}

.webform-progressbar-page .webform-progressbar-page-number {
  display: block;
  color: #49595e;
  padding: 0 0.6em;
  line-height: 1.8em;
}

.webform-progressbar-number {
  font-weight: bold;
  color: #49595e;
}

fieldset.collapsed {
  margin-bottom: 30px;
}

#content .form-item .webform-container-inline .form-control {
  display: initial;
  width: initial;
  max-width: 100%;
}

@media (min-width: 768px) {
  #content .form-item .form-select,
  #content .form-item .form-email,
  #content .form-item .form-file,
  #content .form-item .form-number,
  #content .form-item .form-text {
    width: initial;
    max-width: 100%;
  }
}
/* Breadcrumb Nolink Styles */
.breadcrumb > li a.nolink,
.breadcrumb > li a.nolink:hover,
.breadcrumb > li a.nolink:focus,
.breadcrumb > li:before,
.breadcrumb > li + li:before,
.breadcrumb > li:last-child:after {
  color: #49595e;
  border: none;
  text-decoration: none;
  outline: none;
}


/* LibApps specific overrides */

.nav > li > a:hover,
.nav > li > a:focus {
    outline: none;
}

